fixed button z-index and finally resolved sticky nav issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ header {
   padding: 2rem 5vw;
   position: fixed;
   width: 100%;
-  z-index: 5;
+  z-index: 999;
 }
 
 .header-flex {
@@ -189,6 +189,8 @@ video {
   align-items: center;
   display: flex;
   flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 90vw;
   padding-bottom: 3rem;
 }
@@ -2002,10 +2004,13 @@ hr {
 
   .process-steps {
     padding-top: 6rem;
+    width: 100%;
+    z-index: 3;
   }
 
   .process-steps-flex {
     align-items: flex-end;
+    background-color: #EBF3F6;
     display: flex;
     flex-basis: 20%;
     flex-direction: row;
@@ -2014,14 +2019,14 @@ hr {
     padding-left: 2vw;
     padding-right: 2vw;
     padding-top: 0;
+    width: 100%;
+    z-index: 3;
   }
 
   .fixed-nav {
-    padding: 0;
+    /* padding: 0; */
     position: fixed;
     top: 80px;
-    width: 100%;
-    z-index: 2;
   }
 
   .col-4-flex .process-icon {
